--- a/HelloWorld/app/src/main/res/values/strings.xml
+++ b/HelloWorld/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Hello World</string>
-    <string name="timer_btn">Start 10s timer!</string>
+    <string name="timer_btn">Start timer!</string>
+    <string name="stop_timer_btn">Stop!</string>
+    <string name="no_secs">--s</string>
 </resources>
