--- a/HelloWorld/app/src/main/res/values/strings.xml
+++ b/HelloWorld/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Hello World</string>
+    <string name="input_text">Enter a name...</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment1_header">Let\'s praise/curse people!</string>
 </resources>
